# osquery-extension

./: .testcoverage.yml  BUILD.bazel  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  go.mod  main.go
.github/: pull_request_template.md
tables/dot1x/: BUILD.bazel  dot1x.go  dot1x_darwin.go  dot1x_darwin_test.go  dot1x_helpers_test.go  dot1x_other.go  dot1x_other_test.go  dot1x_test.go  dot1x_windows.go  dot1x_windows_test.go  dot1x_wlanprofile.go  dot1x_wlanprofile_test.go
tables/eapolstatus/: BUILD.bazel  eapol_darwin.go  eapol_darwin_test.go  eapol_other.go  eapol_windows.go  eapol_windows_test.go  eapolstatus.go  eapolstatus_test.go
tables/filevaultusers/: BUILD.bazel
tables/macenclosurecolor/: BUILD.bazel  gestalt_darwin.go  gestalt_darwin_test.go  gestalt_other.go  macenclosurecolor.go  macenclosurecolor_test.go  modelname.go  resolver.go
tables/macos_profiles/: BUILD.bazel
tables/macosrsr/: BUILD.bazel
tables/munki/: BUILD.bazel
tables/touchid/: BUILD.bazel  touchid.go  touchid_test.go
tables/wifi_network/: BUILD.bazel
tools/: bazel_to_builddir.sh
