load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
# load(":rules.bzl", "foo_binary")

# gazelle:prefix github.com/macadmins/osquery-extension
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

genrule(
    name = "version_config",
    srcs = [
        "VERSION",
        "write_version_config.sh",
    ],  # Ensure dependencies are listed
    outs = ["version_config.go"],
    cmd = "$(location write_version_config.sh) $@",
    stamp = 1,
    tools = ["write_version_config.sh"],
)

go_library(
    name = "osquery-extension_lib",
    # keep
    srcs = [
        "main.go",
        ":version_config",
    ],
    importpath = "github.com/macadmins/osquery-extension",
    visibility = ["//visibility:private"],
    deps = [
        "//tables/alt_system_info",
        "//tables/authdb",
        "//tables/chromeuserprofiles",
        "//tables/crowdstrike_falcon",
        "//tables/dot1x",
        "//tables/energyimpact",
        "//tables/fileline",
        "//tables/filevaultusers",
        "//tables/localnetworkpermissions",
        "//tables/macos_profiles",
        "//tables/macosrsr",
        "//tables/mdm",
        "//tables/munki",
        "//tables/networkquality",
        "//tables/pendingappleupdates",
        "//tables/puppet",
        "//tables/socpower",
        "//tables/sofa",
        "//tables/thermalthrottling",
        "//tables/unifiedlog",
        "//tables/wifi_network",
        "@com_github_osquery_osquery_go//:osquery-go",
        "@com_github_osquery_osquery_go//plugin/table",
    ],
)

# The dot1x table (and any future cgo tables) need cgo + Apple CC
# toolchain on darwin. These are darwin-only binaries (goos = "darwin"),
# so cgo=True does not affect Linux/Windows builds. The apple_support
# toolchain in WORKSPACE satisfies the CC requirement on macOS.
#
# These targets require a darwin C++ toolchain (only available on macOS
# hosts), so they are tagged "manual" to keep them out of `//...` / `:all`
# wildcard expansion. That way `bazel build //...` / `bazel test //...` on a
# Linux/Windows host won't try to analyze them and fail; they still build when
# named explicitly (the Makefile and tools/bazel_to_builddir.sh do so, gated on
# the host OS via `ifeq ($(UNAME_S),Darwin)` and `[ "$host_os" = "Darwin" ]`).
#
# target_compatible_with is not used here: the goos="darwin" platform
# transition makes the resolved target platform macOS, so a macos constraint
# would always be satisfied and would never skip the target on a Linux host.
go_binary(
    name = "osquery-extension-mac-arm",
    cgo = True,
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "darwin",
    pure = "off",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-mac-amd",
    cgo = True,
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "darwin",
    pure = "off",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-win-arm",
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "windows",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-win-amd",
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "windows",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-linux-amd",
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-linux-arm",
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
