load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "macenclosurecolor",
    srcs = [
        "gestalt_darwin.go",
        "gestalt_other.go",
        "macenclosurecolor.go",
        "modelname.go",
        "resolver.go",
    ],
    # cgo is only needed on darwin: gestalt_darwin.go (//go:build darwin) calls
    # libMobileGestalt via CoreFoundation. The darwin build constraint does NOT
    # include ios, so there is no ios cgo source — only darwin gets cgo + the
    # CoreFoundation link; linux/windows stay strictly non-cgo / pure.
    # keep
    cgo = select({
        "@io_bazel_rules_go//go/platform:darwin": True,
        "//conditions:default": False,
    }),
    # keep
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "-framework CoreFoundation",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/macadmins/osquery-extension/tables/macenclosurecolor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
    ],
)

go_test(
    name = "macenclosurecolor_test",
    srcs = [
        "gestalt_darwin_test.go",
        "macenclosurecolor_test.go",
    ],
    embed = [":macenclosurecolor"],
    deps = [
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_osquery_osquery_go//plugin/table",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_osquery_osquery_go//plugin/table",
        ],
        "//conditions:default": [],
    }),
)
