load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "touchid",
    srcs = ["touchid.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/touchid",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
    ],
)

go_test(
    name = "touchid_test",
    srcs = ["touchid_test.go"],
    embed = [":touchid"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
